<!--

    Appframework - Parent project for appframework, consisting of a Swing framework for applications and
    	modules that are used across a number of projects.
    Copyright © ${project.inceptionYear} SSHTOOLS Limited (support@sshtools.com)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <http://www.gnu.org/licenses/>.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<properties>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sshtools</groupId>
	<artifactId>appframework</artifactId>
	<version>3.1.3-SNAPSHOT</version>
	<name>Appframework</name>
	<description>Parent project for appframework, consisting of a Swing framework for applications and
	modules that are used across a number of projects.</description>
	<url>http://www.sshtools.com</url>
	<packaging>pom</packaging>

	<!-- <distributionManagement> <snapshotRepository> <id>ossrh-sshtools</id> 
		<url>https://oss.sonatype.org/content/repositories/snapshots</url> </snapshotRepository> 
		<repository> <id>ossrh-sshtools</id> <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url> 
		</repository> </distributionManagement> -->

	<distributionManagement>
		<snapshotRepository>
			<uniqueVersion>true</uniqueVersion>
			<id>opensource-snapshots</id>
			<name>SSHTOOLS Opensource Snapshots</name>
			<url>http://artifactory.javassh.com/opensource-snapshots</url>
			<layout>default</layout>
		</snapshotRepository>
		<repository>
			<uniqueVersion>true</uniqueVersion>
			<id>opensource-releases</id>
			<name>SSHTOOLS Opensource Releases</name>
			<url>http://artifactory.javassh.com/opensource-releases</url>
			<layout>default</layout>
		</repository>
	</distributionManagement>

	<licenses>
		<license>
			<name>Dual GPL/Commercial</name>
			<url>${project.url}/LICENSE.txt</url>
			<comments>Terminal Components uses a Dual Licensing module. Under this model, you may choose
 to use Terminal Components under the free software/open source GNU Generic Public License
 (commonly know as the "GPL"), or you may purchase a Commercial license allowing use 
 in proprietary applications.</comments>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/sshtools/appframework</url>
		<connection>https://github.com/sshtools/appframework.git</connection>
	</scm>
	<developers>
		<developer>
			<id>brett</id>
			<name>Brett Smith</name>
			<email>brett@nervepoint.com</email>
		</developer>
	</developers>

	<modules>
		<module>virtualsession</module>
		<module>appframework-core</module>
		<module>appframework-client</module>
	</modules>

	<dependencies>
		<!-- Tests -->
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.13.2</version>
		    <scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>opensource-snapshots</id>
			<name>SSHTOOLS Opensource Snapshots</name>
			<url>http://artifactory.javassh.com/opensource-snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots/>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.2.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9.1</version>
					<executions>
						<execution>
							<id>javadoc-jar</id>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<!-- switch on dependency-driven aggregation -->
								<includeDependencySources>false</includeDependencySources>
								<dependencySourceIncludes>
									<!-- include ONLY dependencies I control -->
									<dependencySourceInclude>com.sshtools:*</dependencySourceInclude>
								</dependencySourceIncludes>
								<additionalparam>-Xdoclint:none</additionalparam>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>1.5</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>2.3</version>
					<configuration>
						<header>templates/GPL-3.txt</header>
						<properties>
							<owner>SSHTOOLS Limited</owner>
							<email>support@sshtools.com</email>
						</properties>
						<excludes>
							<exclude>**/README</exclude>
							<exclude>src/test/resources/**</exclude>
							<exclude>src/main/resources/**</exclude>
						</excludes>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>format</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.3</version>
					<extensions>true</extensions>
					<configuration>
						<serverId>ossrh-sshtools</serverId>
						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
